--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@InProceedings{li2021multilingual,
+  author = 	 {Li, Xinjian and Mortensen, David R and Metze, Florian and Black, Alan W.},
+  title = 	 {Multilingual phonetic dataset for low resource speech recognition},
+  booktitle =	 {ICASSP 2021},
+  year =	 {2021}
+}
+
+@InProceedings{chaudhary2020automatic,
+  author = 	 {Aditi Chaudhary and Antonios Anastasopoulos and Adithya Pratapa and David R. Mortensen and Zaid Sheikh and Yulia Tsvetkov and Graham Neubig},
+  title = 	 {Automatic Extraction of Rules Governing Morphological Agreement},
+  booktitle =	 {Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing},
+  year =	 {2020},
+  url =          {https://www.aclweb.org/anthology/2020.emnlp-main.422.pdf}
+}
+
+@InProceedings{sun2021ranking,
+  author = 	 {Jimin Sun and Hwijeen Ahn and Chan Young Park and Yulia Tsvetkov and David R. Mortensen},
+  title = 	 {Ranking Transfer Languages with Pragmatically-Motivated Features for Multilingual Sentiment Analysis},
+  booktitle =	 {EACL 2021},
+  year =	 {2021}
+}
+
 @InProceedings{chaudhary2019cmu,
     title = "{CMU}-01 at the {SIGMORPHON} 2019 Shared Task on Crosslinguality and Context in Morphology",
     author = "Chaudhary, Aditi  and
@@ -107,13 +129,6 @@
   volume =	 4,
   number =	 1,
   pages =	 {62--114}
-}
-
-@InProceedings{ryskina2020new,
-  author = 	 {Maria Ryskina and Ella Rabinovich and Taylor Berg-Kirkpatrick and David R. Mortensen and Yulia Tsvetkov},
-  title = 	 {Where New Words Are Born: Distributional Semantic Analysis of Neologisms and Their Semantic Neighborhoods},
-  booktitle =	 {SCiL 2020},
-  year =	 {2020}
 }
 
 @Article{marr2020large,
@@ -416,18 +431,6 @@
                   "https://oxfordre.com/linguistics/view/10.1093/acrefore/9780199384655.001.0001/acrefore-9780199384655-e-341"
 }
 
-@InCollection{mortensen2017hmongmienbib,
-  title =	 "{Hmong-Mien} Languages",
-  booktitle =	 "Oxford Bibliographies in Linguistics",
-  year =	 2017,
-  author =	 "David R. Mortensen",
-  editor =	 "Mark Aronoff",
-  publisher =	 "Oxford University Press",
-  address =	 "New York",
-  url =
-                  "https://www.oxfordbibliographies.com/view/document/obo-9780199772810/obo-9780199772810-0173.xml"
-}
-
 @InProceedings{mortensen2013lexical,
   author =	 {David R. Mortensen},
   title =	 {Lexical Prefixes and {Tibeto-Burman} Laryngeal
@@ -470,66 +473,3 @@
   pages =	 {243--245}
 }
 
-@Misc{mortensen2019indomorphsw,
-  author =	 {David R. Mortensen and Jong Hyuk Park},
-  title =	 {{IndoMorph}},
-  url =		 {https://github.com/dmort27/indomorph},
-  year =	 2019,
-  note =	 {Collection of Foma FST morphological analyzers for
-                  languages of the Indian subcontinent}
-}
-
-@Misc{mortensen2018mstemsw,
-  author =	 {David R. Mortensen},
-  title =	 {{MStem}},
-  url =		 {https://github.com/dmort27/mstem},
-  year =	 2018,
-  note =	 {Python multilingual morphological stemming framework
-                  and stemmer collection}
-}
-
-@Misc{mortensen2018epitransw,
-  author =	 {David R. Mortensen},
-  title =	 {{Epitran}},
-  year =	 2018,
-  note =	 {Precision orthography-to-IPA conversion for 65
-                  languages},
-  url =		 {https://github.com/dmort27/epitran}
-}
-
-@Misc{mortensen2016panphonsw,
-  author =	 {David R. Mortensen},
-  title =	 {{PanPhon}},
-  year =	 2016,
-  note =	 {Articulatory feature extractor and library},
-  url =		 {https://github.com/dmort27/NetSPE}
-}
-
-@Misc{mortensen2012netspesw,
-  author =	 {David R. Mortensen},
-  title =	 {{NetSPE}},
-  year =	 2012,
-  note =	 {A web-based application for exploring rule-based
-                  analyses of phonological data},
-  url =		 {https://github.com/dmort27/NetSPE}
-}
-
-@Misc{mortensen2011webcomparatorsw,
-  author =	 {David R. Mortensen},
-  title =	 {{Web Comparator}},
-  year =	 2011,
-  note =	 {A web-based application for organizing and analyzing
-                  comparative lexical databases. Used in the
-                  production of ``Emergence of Obstruents'' and
-                  ``Proto-Tangkhulic Rhymes''},
-  url =		 {https://github.com/dmort27/WebComparator}
-}
-
-@Misc{mortensen2011hsspesw,
-  author =	 {David R. Mortensen},
-  title =	 {{HsSPE}},
-  year =	 2011,
-  note =	 {Haskell library implementing SPE-style rule-based
-                  phonology},
-  url =		 {https://github.com/dmort27/HsSPE}
-}
