Added bib items

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,87 @@
 ---
 ---
 
+@inproceedings{pratapa2021evaluating,
+    title = "Evaluating the Morphosyntactic Well-formedness of Generated Texts",
+    author = "Pratapa, Adithya  and
+      Anastasopoulos, Antonios  and
+      Rijhwani, Shruti  and
+      Chaudhary, Aditi  and
+      Mortensen, David R.  and
+      Neubig, Graham  and
+      Tsvetkov, Yulia",
+    booktitle = "Proceedings of the 2021 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2021",
+    address = "Online and Punta Cana, Dominican Republic",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.emnlp-main.570",
+    doi = "10.18653/v1/2021.emnlp-main.570",
+    pages = "7131--7150",
+    abstract = "Text generation systems are ubiquitous in natural language processing applications. However, evaluation of these systems remains a challenge, especially in multilingual settings. In this paper, we propose L{'}AMBRE {--} a metric to evaluate the morphosyntactic well-formedness of text using its dependency parse and morphosyntactic rules of the language. We present a way to automatically extract various rules governing morphosyntax directly from dependency treebanks. To tackle the noisy outputs from text generation systems, we propose a simple methodology to train robust parsers. We show the effectiveness of our metric on the task of machine translation through a diachronic study of systems translating into morphologically-rich languages.",
+}
+
+@article{francis2021quantifying,
+    author = {Francis, David and Rabinovich, Ella and Samir, Farhan and Mortensen, David and Stevenson, Suzanne},
+    title = "{Quantifying Cognitive Factors in Lexical Decline}",
+    journal = {Transactions of the Association for Computational Linguistics},
+    volume = {9},
+    pages = {1529-1545},
+    year = {2021},
+    month = {12},
+    abstract = "{We adopt an evolutionary view on language change in which cognitive factors (in addition to social ones) affect the fitness of words and their success in the linguistic ecosystem. Specifically, we propose a variety of psycholinguistic factors—semantic, distributional, and phonological—that we hypothesize are predictive of lexical decline, in which words greatly decrease in frequency over time. Using historical data across three languages (English, French, and German), we find that most of our proposed factors show a significant difference in the expected direction between each curated set of declining words and their matched stable words. Moreover, logistic regression analyses show that semantic and distributional factors are significant in predicting declining words. Further diachronic analysis reveals that declining words tend to decrease in the diversity of their lexical contexts over time, gradually narrowing their ‘ecological niches’.}",
+    issn = {2307-387X},
+    doi = {10.1162/tacl_a_00441},
+    url = {https://doi.org/10.1162/tacl\_a\_00441},
+    eprint = {https://direct.mit.edu/tacl/article-pdf/doi/10.1162/tacl\_a\_00441/1979747/tacl\_a\_00441.pdf},
+}
+
+@inproceedings{siminyu2021phoneme,
+  author={Kathleen Siminyu and Xinjian Li and Antonios Anastasopoulos and David R. Mortensen and Michael R. Marlo and Graham Neubig},
+  title={{Phoneme Recognition Through Fine Tuning of Phonetic Representations: A Case Study on Luhya Language Varieties}},
+  year=2021,
+  booktitle={Proc. Interspeech 2021},
+  pages={271--275},
+  doi={10.21437/Interspeech.2021-1434}
+}
+
+@inproceedings{mortensen2021tusom2021,
+  author={David R. Mortensen and Jordan Picone and Xinjian Li and Kathleen Siminyu},
+  title={{Tusom2021: A Phonetically Transcribed Speech Dataset from an Endangered Language for Universal Phone Recognition Experiments}},
+  year=2021,
+  booktitle={Proc. Interspeech 2021},
+  pages={3660--3664},
+  doi={10.21437/Interspeech.2021-1435}
+}
+
+@inproceedings{yan2021differentiable,
+  author={Brian Yan and Siddharth Dalmia and David R. Mortensen and Florian Metze and Shinji Watanabe},
+  title={{Differentiable Allophone Graphs for Language-Universal Speech Recognition}},
+  year=2021,
+  booktitle={Proc. Interspeech 2021},
+  pages={2471--2475},
+  doi={10.21437/Interspeech.2021-1944}
+}
+
+@inproceedings{pratapa2021evaluating,
+    title = "Evaluating the Morphosyntactic Well-formedness of Generated Texts",
+    author = "Pratapa, Adithya  and
+      Anastasopoulos, Antonios  and
+      Rijhwani, Shruti  and
+      Chaudhary, Aditi  and
+      Mortensen, David R.  and
+      Neubig, Graham  and
+      Tsvetkov, Yulia",
+    booktitle = "Proceedings of the 2021 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2021",
+    address = "Online and Punta Cana, Dominican Republic",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.emnlp-main.570",
+    pages = "7131--7150",
+    abstract = "Text generation systems are ubiquitous in natural language processing applications. However, evaluation of these systems remains a challenge, especially in multilingual settings. In this paper, we propose L{'}AMBRE {--} a metric to evaluate the morphosyntactic well-formedness of text using its dependency parse and morphosyntactic rules of the language. We present a way to automatically extract various rules governing morphosyntax directly from dependency treebanks. To tackle the noisy outputs from text generation systems, we propose a simple methodology to train robust parsers. We show the effectiveness of our metric on the task of machine translation through a diachronic study of systems translating into morphologically-rich languages.",
+}
+
 @article{mortensen2021east,
    author = "Mortensen, David R. and Picone, Jordan",
    title = "East Tusom: A phonetic and phonological sketch of a largely undocumented Tangkhulic language", 
