--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
   author = 	 {Marr, Clayton and Mortensen, David},
   title = 	 {Large-Scale Computerized Forward Reconstruction Yields New Perspectives in French Diachronic Phonology},
   journal = 	 {Diachronica},
-  year = 	 {in press},
+  year = 	 {2022},
 }
 
 @InProceedings{mortensen2022hmong,
