--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,152 @@
+@article{boldt2024review,
+title={A Review of the Applications of Deep Learning-Based Emergent Communication},
+author={Brendon Boldt and David R. Mortensen},
+journal={Transactions on Machine Learning Research},
+issn={2835-8856},
+year={2024},
+url={https://openreview.net/forum?id=jesKcQxQ7j},
+note={}
+}
+
+@article{mortensen2023kuki,
+  title={Kuki-Chin Phonology: An Overview},
+  author={Mortensen, David R},
+  journal={Himalayan Linguistics},
+  volume={22},
+  number={1},
+  year={2023}
+}
+
+@inproceedings{robinson2023african,
+title={{African} Substrates Rather Than {European} Lexifiers to Augment {African}-diaspora Creole Translation},
+author={Nathaniel Romney Robinson and Matthew Dean Stutzman and Stephen D. Richardson and David R Mortensen},
+booktitle={4th Workshop on African Natural Language Processing},
+year=2023,
+url={https://openreview.net/forum?id=YKUv4sSOom}
+}
+
+@inproceedings{chang2023automating,
+    title = "Automating Sound Change Prediction for Phylogenetic Inference: A {Tukanoan} Case Study",
+    author = "Chang, Kalvin  and
+      Robinson, Nathaniel  and
+      Cai, Anna  and
+      Chen, Ting  and
+      Zhang, Annie  and
+      Mortensen, David",
+    editor = "Tahmasebi, Nina  and
+      Montariol, Syrielle  and
+      Dubossarsky, Haim  and
+      Kutuzov, Andrey  and
+      Hengchen, Simon  and
+      Alfter, David  and
+      Periti, Francesco  and
+      Cassotti, Pierluigi",
+    booktitle = "Proceedings of the 4th Workshop on Computational Approaches to Historical Language Change",
+    month = dec,
+    year = "2023",
+    address = "Singapore",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.lchange-1.14",
+    doi = "10.18653/v1/2023.lchange-1.14",
+    pages = "129--142",
+    abstract = "We describe a set of new methods to partially automate linguistic phylogenetic inference given (1) cognate sets with their respective protoforms and sound laws, (2) a mapping from phones to their articulatory features and (3) a typological database of sound changes.We train a neural network on these sound change data to weight articulatory distances between phones and predict intermediate sound change steps between historical protoforms and their modern descendants, replacing a linguistic expert in part of a parsimony-based phylogenetic inference algorithm. In our best experiments on Tukanoan languages, this method produces trees with a Generalized Quartet Distance of 0.12 from a tree that used expert annotations, a significant improvement over other semi-automated baselines. We discuss potential benefits and drawbacks to our neural approach and parsimony-based tree prediction. We also experiment with a minimal generalization learner for automatic sound law induction, finding it less effective than sound laws from expert annotation. Our code is publicly available.",
+}
+
+@inproceedings{robinson2023chatgpt,
+    title = "{C}hat{GPT} {MT}: Competitive for High- (but Not Low-) Resource Languages",
+    author = "Robinson, Nathaniel  and
+      Ogayo, Perez  and
+      Mortensen, David R.  and
+      Neubig, Graham",
+    editor = "Koehn, Philipp  and
+      Haddow, Barry  and
+      Kocmi, Tom  and
+      Monz, Christof",
+    booktitle = "Proceedings of the Eighth Conference on Machine Translation",
+    month = dec,
+    year = "2023",
+    address = "Singapore",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.wmt-1.40",
+    doi = "10.18653/v1/2023.wmt-1.40",
+    pages = "392--418",
+    abstract = "Large language models (LLMs) implicitly learn to perform a range of language tasks, including machine translation (MT). Previous studies explore aspects of LLMs{'} MT capabilities. However, there exist a wide variety of languages for which recent LLM MT performance has never before been evaluated. Without published experimental evidence on the matter, it is difficult for speakers of the world{'}s diverse languages to know how and whether they can use LLMs for their languages. We present the first experimental evidence for an expansive set of 204 languages, along with MT cost analysis, using the FLORES-200 benchmark. Trends reveal that GPT models approach or exceed traditional MT model performance for some high-resource languages (HRLs) but consistently lag for low-resource languages (LRLs), under-performing traditional MT for 84.1{\%} of languages we covered. Our analysis reveals that a language{'}s resource level is the most important feature in determining ChatGPT{'}s relative ability to translate it, and suggests that ChatGPT is especially disadvantaged for LRLs and African languages.",
+}
+
+
+@inproceedings{ahia2023languages,
+    title = "Do All Languages Cost the Same? Tokenization in the Era of Commercial Language Models",
+    author = "Ahia, Orevaoghene  and
+      Kumar, Sachin  and
+      Gonen, Hila  and
+      Kasai, Jungo  and
+      Mortensen, David  and
+      Smith, Noah  and
+      Tsvetkov, Yulia",
+    editor = "Bouamor, Houda  and
+      Pino, Juan  and
+      Bali, Kalika",
+    booktitle = "Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing",
+    month = dec,
+    year = "2023",
+    address = "Singapore",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.emnlp-main.614",
+    doi = "10.18653/v1/2023.emnlp-main.614",
+    pages = "9904--9923",
+    abstract = "Language models have graduated from being research prototypes to commercialized products offered as web APIs, and recent works have highlighted the multilingual capabilities of these products. The API vendors charge their users based on usage, more specifically on the number of {``}tokens{''} processed or generated by the underlying language models. What constitutes a token, however, is training data and model dependent with a large variance in the number of tokens required to convey the same information in different languages. In this work, we analyze the effect of this non-uniformity on the fairness of an API{'}s pricing policy across languages. We conduct a systematic analysis of the cost and utility of OpenAI{'}s language model API on multilingual benchmarks in 22 typologically diverse languages. We show evidence that speakers of a large number of the supported languages are overcharged while obtaining poorer results. These speakers tend to also come from regions where the APIs are less affordable, to begin with. Through these analyses, we aim to increase transparency around language model APIs{'} pricing policies and encourage the vendors to make them more equitable.",
+}
+
+
+@inproceedings{weissweiler2023counting,
+    title = "Counting the Bugs in {C}hat{GPT}{'}s Wugs: A Multilingual Investigation into the Morphological Capabilities of a Large Language Model",
+    author = "Weissweiler, Leonie  and
+      Hofmann, Valentin  and
+      Kantharuban, Anjali  and
+      Cai, Anna  and
+      Dutt, Ritam  and
+      Hengle, Amey  and
+      Kabra, Anubha  and
+      Kulkarni, Atharva  and
+      Vijayakumar, Abhishek  and
+      Yu, Haofei  and
+      Schuetze, Hinrich  and
+      Oflazer, Kemal  and
+      Mortensen, David",
+    editor = "Bouamor, Houda  and
+      Pino, Juan  and
+      Bali, Kalika",
+    booktitle = "Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing",
+    month = dec,
+    year = "2023",
+    address = "Singapore",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.emnlp-main.401",
+    doi = "10.18653/v1/2023.emnlp-main.401",
+    pages = "6508--6524",
+    abstract = "Large language models (LLMs) have recently reached an impressive level of linguistic capability, prompting comparisons with human language skills. However, there have been relatively few systematic inquiries into the linguistic capabilities of the latest generation of LLMs, and those studies that do exist (i) ignore the remarkable ability of humans to generalize, (ii) focus only on English, and (iii) investigate syntax or semantics and overlook other capabilities that lie at the heart of human language, like morphology. Here, we close these gaps by conducting the first rigorous analysis of the morphological capabilities of ChatGPT in four typologically varied languages (specifically, English, German, Tamil, and Turkish). We apply a version of Berko{'}s (1958) wug test to ChatGPT, using novel, uncontaminated datasets for the four examined languages. We find that ChatGPT massively underperforms purpose-built systems, particularly in English. Overall, our results{---}through the lens of morphology{---}cast a new light on the linguistic capabilities of ChatGPT, suggesting that claims of human-like language skills are premature and misleading.",
+}
+
+
+@inproceedings{feng2023calibrated,
+    title = "Calibrated Seq2seq Models for Efficient and Generalizable Ultra-fine Entity Typing",
+    author = "Feng, Yanlin  and
+      Pratapa, Adithya  and
+      Mortensen, David",
+    editor = "Bouamor, Houda  and
+      Pino, Juan  and
+      Bali, Kalika",
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2023",
+    month = dec,
+    year = "2023",
+    address = "Singapore",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.findings-emnlp.1040",
+    doi = "10.18653/v1/2023.findings-emnlp.1040",
+    pages = "15550--15560",
+    abstract = "Ultra-fine entity typing plays a crucial role in information extraction by predicting fine-grained semantic types for entity mentions in text. However, this task poses significant challenges due to the massive number of entity types in the output space. The current state-of-the-art approaches, based on standard multi-label classifiers or cross-encoder models, suffer from poor generalization performance or inefficient inference speed. In this paper, we present CASENT, a seq2seq model designed for ultra-fine entity typing that predicts ultra-fine types with calibrated confidence scores. Our model takes an entity mention as input and employs constrained beam search to generate multiple types autoregressively. The raw sequence probabilities associated with the predicted types are then transformed into confidence scores using a novel calibration method. We conduct extensive experiments on the UFET dataset which contains over $10k$ types. Our method outperforms the previous state-of-the-art in terms of F1 score and calibration error, while achieving an inference speedup of over 50 times. Additionally, we demonstrate the generalization capabilities of our model by evaluating it in zero-shot and few-shot settings on five specialized domain entity typing datasets that are unseen during training. Remarkably, our model outperforms large language models with 10 times more parameters in the zero-shot setting, and when fine-tuned on 50 examples, it significantly outperforms ChatGPT on all datasets.",
+}
+
 @inproceedings{weissweiler2023construction,
     title = "Construction Grammar Provides Unique Insight into Neural Language Models",
     author = {Weissweiler, Leonie  and
@@ -10,36 +159,12 @@
       Tayyar Madabushi, Harish",
     booktitle = "Proceedings of the First International Workshop on Construction Grammars and NLP (CxGs+NLP, GURT/SyntaxFest 2023)",
     month = mar,
-    year = "2023",
+    year = 2023,
     address = "Washington, D.C.",
     publisher = "Association for Computational Linguistics",
     url = "https://aclanthology.org/2023.cxgsnlp-1.10",
     pages = "85--95",
     abstract = "Construction Grammar (CxG) has recently been used as the basis for probing studies that have investigated the performance of large pretrained language models (PLMs) with respect to the structure and meaning of constructions. In this position paper, we make suggestions for the continuation and augmentation of this line of research. We look at probing methodology that was not designed with CxG in mind, as well as probing methodology that was designed for specific constructions. We analyse selected previous work in detail, and provide our view of the most important challenges and research questions that this promising new field faces.",
-}
-
-@inproceedings{he2023sigmorefun,
-    title = "{S}ig{M}ore{F}un Submission to the {SIGMORPHON} Shared Task on Interlinear Glossing",
-    author = "He, Taiqi  and
-      Tjuatja, Lindia  and
-      Robinson, Nathaniel  and
-      Watanabe, Shinji  and
-      Mortensen, David R.  and
-      Neubig, Graham  and
-      Levin, Lori",
-    editor = {Nicolai, Garrett  and
-      Chodroff, Eleanor  and
-      Mailhot, Frederic  and
-      {\c{C}}{\"o}ltekin, {\c{C}}a{\u{g}}r{\i}},
-    booktitle = "Proceedings of the 20th SIGMORPHON workshop on Computational Research in Phonetics, Phonology, and Morphology",
-    month = jul,
-    year = "2023",
-    address = "Toronto, Canada",
-    publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/2023.sigmorphon-1.22",
-    doi = "10.18653/v1/2023.sigmorphon-1.22",
-    pages = "209--216",
-    abstract = "In our submission to the SIGMORPHON 2023 Shared Task on interlinear glossing (IGT), we explore approaches to data augmentation and modeling across seven low-resource languages. For data augmentation, we explore two approaches: creating artificial data from the provided training data and utilizing existing IGT resources in other languages. On the modeling side, we test an enhanced version of the provided token classification baseline as well as a pretrained multilingual seq2seq model. Additionally, we apply post-correction using a dictionary for Gitksan, the language with the smallest amount of data. We find that our token classification models are the best performing, with the highest word-level accuracy for Arapaho and highest morpheme-level accuracy for Gitksan out of all submissions. We also show that data augmentation is an effective strategy, though applying artificial data pretraining has very different effects across both models tested.",
 }
 
 @inproceedings{kim2023transformed,
@@ -88,15 +213,35 @@
   organization={Springer}
 }
 
+@inproceedings{he2023sigmorefun,
+    title = "{S}ig{M}ore{F}un Submission to the {SIGMORPHON} Shared Task on Interlinear Glossing",
+    author = "He, Taiqi  and
+      Tjuatja, Lindia  and
+      Robinson, Nathaniel  and
+      Watanabe, Shinji  and
+      Mortensen, David R.  and
+      Neubig, Graham  and
+      Levin, Lori",
+    booktitle = "Proceedings of the 20th SIGMORPHON workshop on Computational Research in Phonetics, Phonology, and Morphology",
+    month = jul,
+    year = "2023",
+    address = "Toronto, Canada",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.sigmorphon-1.22",
+    doi = "10.18653/v1/2023.sigmorphon-1.22",
+    pages = "209--216",
+    abstract = "In our submission to the SIGMORPHON 2023 Shared Task on interlinear glossing (IGT), we explore approaches to data augmentation and modeling across seven low-resource languages. For data augmentation, we explore two approaches: creating artificial data from the provided training data and utilizing existing IGT resources in other languages. On the modeling side, we test an enhanced version of the provided token classification baseline as well as a pretrained multilingual seq2seq model. Additionally, we apply post-correction using a dictionary for Gitksan, the language with the smallest amount of data. We find that our token classification models are the best performing, with the highest word-level accuracy for Arapaho and highest morpheme-level accuracy for Gitksan out of all submissions. We also show that data augmentation is an effective strategy, though applying artificial data pretraining has very different effects across both models tested.",
+}
+
 @inproceedings{robinson2022data,
-    title = "Data-adaptive Transfer Learning for Translation: A Case Study in {H}aitian and Jamaican",
+    title = "Data-adaptive Transfer Learning for Translation: A Case Study in {Haitian} and {Jamaican}",
     author = "Robinson, Nathaniel  and
       Hogan, Cameron  and
       Fulda, Nancy  and
       Mortensen, David R.",
     booktitle = "Proceedings of the Fifth Workshop on Technologies for Machine Translation of Low-Resource Languages (LoResMT 2022)",
     month = oct,
-    year = "2022",
+    year = 2022,
     address = "Gyeongju, Republic of Korea",
     publisher = "Association for Computational Linguistics",
     url = "https://aclanthology.org/2022.loresmt-1.5",
@@ -150,7 +295,7 @@
 
 @Article{marr2022large,
   author = 	 {Marr, Clayton and Mortensen, David},
-  title = 	 {Large-Scale Computerized Forward Reconstruction Yields New Perspectives in {French} Diachronic Phonology},
+  title = 	 {Large-Scale Computerized Forward Reconstruction Yields New Perspectives in French Diachronic Phonology},
   journal = 	 {Diachronica},
   year = 	 {2022},
 }
